problem with too large epub letters solved

--- a/book_languages.css
+++ b/book_languages.css
@@ -1,50 +1,54 @@
 body {
 	font-family: 'Crimson Pro';
-	font-size: 16pt;
 }
 
+.r-index, .l-index{
+	width: 2em;
+	vertical-align: top;
+	padding-top: 0.5em !important;
+	font-size: 0.5em;
+}
 
 .l-index{
 	font-family: 'Crimson Pro';
 	text-align: right;
-	padding-right: 0.125em;
+	padding-right: 0.33em;
 	font-weight: bold;
 }
 
 .r-index{
 	font-family: 'Shlomo Bold';
 	text-align: left;
-	padding-left: 0.125em;
+	padding-left: 0.33em;
+}
+
+.text{
+	font-size: 0.8em;
 }
 
 [lang='he'], [lang='yi']{
-
-	font-size: 1.7em;
+	font-size: 1.33em;
 }
 
 [lang=he] .note_1, [lang=he] i {
 	font-style: normal;
 	font-family: "Taamey Frank CLM";
 	vertical-align: middle;
-	font-size: 0.8em;
-
+	font-size: 0.75em;
 }
 
-.index-rowlang-he{
+.index-rowlang-he, .index-rowlang-yi{
 	padding-top: 1em !important;
 }
 
 .langlist {
-	font-size: 35px !important;
+	font-size: 1em !important;
 	text-align: center;
-	bottom: 10pt;
-	right: -1vw;;
-	position: absolute;
+	top: 0.0em;
 	width: auto;
-	border:3px solid black;
-	background-color: black;
-	color: whitesmoke;
+	color: #696969;
 	padding: 0.1em 1em;
+	font-weight: bold;
 }
 
 .langlist div {
